k8s/daemonset.yml
apiVersion:
kind: DaemonSet
metadata:
  name: node-exporter
spec:
  selector: 
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
      - name: exporter 
        image: prom/node-exporter
