k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod 
  labels:
    app: web
spec: 
  containers:
    - name: nginx
      image: nginx:latest
      ports:
      - containerPort: 80

## kubectl apply -f pod.yaml
---

apiVersion: v1
kind: Pod 
metadata:
  name: website
  labels:
    name: web
    application: my-app 
    version: "v31"
    release: "r42"
    stage: production
spec:
  containers:
    - name: web-server 
      image: nginx
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
