k8s/statefulSet.yml
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: mysql
  namespace: dev
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
    spec:
      containers: 
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306

      volumeMounts:
      - name: mysql-storage
        mountPath: /var/lib/mysql

  volumeClaimTemplates:
  - metadata:
      name: mysql-storage
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: ebs-sc
      resources:
        requests:
          storage: 20Gi
