k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: app-ingress 
  annotations: 
    kubernetes.io/ingress.class: alb 
spec: 
  rules:
  - host: cart.roboshop.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: cart 
            port:
              number: 80
