k8s/network-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: prod 
spec:
  podSelector: {}
  policyTypes:
    - ingress 
    - egress
